Mon Nov 29 17:48:29 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Remove obsolete versions of lexgrog.  They're still available in
	revision control if people want them.

	* src/Makefile.am (EXTRA_DIST): Remove.
	* src/README.lexgrog, src/lexgrog.l-2.3.8, src/lexgrog.l-2.4a,
	  src/lexgrog.l.new: Remove.

Sun Nov 28 15:01:21 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Remove internal copy of libpipeline.

	* configure.ac: Remove --enable-socketpair-pipe and
	  --with-external-pipeline options.  Remove INTERNAL_PIPELINE
	  Automake conditional.  Check for libpipeline unconditionally.
	* docs/INSTALL.quick: Mention the need to install libpipeline.
	* gnulib: Remove strsignal and sys_select modules.
	* lib/Makefile.am (libman_la_SOURCES): Never add pipeline.c or
	  pipeline.h.
	* lib/pipeline.c, lib/pipeline.h: Remove.
	* m4/man-socketpair.m4: Remove.
	* NEWS: Document this.  Bump to 2.6.0.

Thu Nov 18 13:46:04 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Reducing linkage when we switched to libtool caused build failures
	with versions of GNU ld that default to --no-copy-dt-needed-entries.
	Partially revert these changes, this time taking care to directly
	link programs against libraries if and only if they use symbols from
	those libraries directly (otherwise, the linkage from libman.la and
	libmandb.la should be sufficient).

	* src/Makefile.am (LIBMAN): Add $(top_builddir)/gnulib/lib/libgnu.la
	  and @LTLIBINTL@.
	  (LIBMANDB): Add $(LIBMAN) and $(DBLIBS).
	  (lexgrog_LDADD, man_LDADD, manconv_LDADD, mandb_LDADD): Add
	  $(libpipeline_LIBS) and $(LTLIBICONV).
	  (whatis_LDADD, zsoelim_LDADD): Add $(libpipeline_LIBS).
	* NEWS: Document this.

Wed Nov 17 11:43:30 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.9.
	* man/po4a/po/man-db-manpages.pot, po/man-db.pot, po/*.po: Update.

Wed Nov 17 11:34:36 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* lib/util.c (init_locale): Avoid warnings if configured with