@@ -1,3 +1,8 @@
+Wed Dec  1 14:15:34 GMT 2010  Colin Watson  <cjwatson@debian.org>
+
+	* lib/security.c (do_system_drop_privs): Copy-edit header comment,
+	  and update it for libpipeline.
+
 Mon Nov 29 17:48:29 GMT 2010  Colin Watson  <cjwatson@debian.org>
 
 	Remove obsolete versions of lexgrog.  They're still available in
